--- a/calc.css
+++ b/calc.css
@@ -22,7 +22,7 @@ body {
 button {
     width: 110px;
     height: 30px;
-    margin: 2px 2px 2px 2px; 
+    margin: 2px 0px 2px 1px; 
     background-color: black;
     color: aliceblue;
     text-decoration: none;
@@ -41,5 +41,5 @@ button {
 .multiply,
 .divided {
     background-color:orange;
-    /* margin-right: 2px; */
+    margin-right: 2px;
  }
